--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -19,9 +19,20 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\lib\Hash.h" />
+    <ClInclude Include="src\core\CollisionDetector.h" />
+    <ClInclude Include="src\core\Controller.h" />
+    <ClInclude Include="src\core\Game.h" />
+    <ClInclude Include="src\core\GameInitializer.h" />
+    <ClInclude Include="src\core\GameManager.h" />
+    <ClInclude Include="src\core\GameUpdater.h" />
+    <ClInclude Include="src\core\MoveLogic.h" />
+    <ClInclude Include="src\core\VelocityCalculator.h" />
+    <ClInclude Include="src\lib\HashCode.h" />
+    <ClInclude Include="src\calc\Geometry.h" />
+    <ClInclude Include="src\calc\Physics.h" />
+    <ClInclude Include="src\calc\VectorCalculator.h" />
     <ClInclude Include="src\model\Ship.h" />
-    <ClInclude Include="src\misc\SegmentIntersector.h" />
+    <ClInclude Include="src\calc\SegmentIntersector.h" />
     <ClInclude Include="src\lib\Array.h" />
     <ClInclude Include="src\lib\Exceptions.h" />
     <ClInclude Include="src\lib\List.h" />
@@ -29,16 +40,32 @@
     <ClInclude Include="src\lib\Memory.h" />
     <ClInclude Include="src\lib\Object.h" />
     <ClInclude Include="src\lib\Random.h" />
-    <ClInclude Include="src\lib\Vector3d.h" />
+    <ClInclude Include="src\calc\Vector3d.h" />
+    <ClInclude Include="src\model\Track.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\lib\Hash.cpp" />
-    <ClCompile Include="src\misc\SegmentIntersector.cpp" />
+    <ClCompile Include="src\core\CollisionDetector.cpp" />
+    <ClCompile Include="src\core\Controller.cpp" />
+    <ClCompile Include="src\core\Game.cpp" />
+    <ClCompile Include="src\core\GameConstants.cpp" />
+    <ClInclude Include="src\core\GameConstants.h" />
+    <ClCompile Include="src\core\GameInitializer.cpp" />
+    <ClCompile Include="src\core\GameManager.cpp" />
+    <ClCompile Include="src\core\GameUpdater.cpp" />
+    <ClCompile Include="src\core\MoveLogic.cpp" />
+    <ClCompile Include="src\core\VelocityCalculator.cpp" />
+    <ClCompile Include="src\lib\HashCode.cpp" />
+    <ClCompile Include="src\calc\Geometry.cpp" />
+    <ClCompile Include="src\calc\Physics.cpp" />
+    <ClCompile Include="src\calc\VectorCalculator.cpp" />
+    <ClCompile Include="src\model\Ship.cpp" />
+    <ClCompile Include="src\calc\SegmentIntersector.cpp" />
     <ClCompile Include="src\lib\Math.cpp" />
     <ClCompile Include="src\lib\Memory.cpp" />
     <ClCompile Include="src\lib\Object.cpp" />
     <ClCompile Include="src\lib\Random.cpp" />
-    <ClCompile Include="src\lib\Vector3d.cpp" />
+    <ClCompile Include="src\calc\Vector3d.cpp" />
+    <ClCompile Include="src\model\Track.cpp" />
     <ClCompile Include="src\win\App.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
