--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -25,6 +25,7 @@
     <ClInclude Include="src\calc\Geometry.h" />
     <ClInclude Include="src\calc\Physics.h" />
     <ClInclude Include="src\calc\VectorCalculator.h" />
+    <ClInclude Include="src\model\CircleTrack.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -49,5 +50,6 @@
     <ClCompile Include="src\calc\Geometry.cpp" />
     <ClCompile Include="src\calc\Physics.cpp" />
     <ClCompile Include="src\calc\VectorCalculator.cpp" />
+    <ClCompile Include="src\model\CircleTrack.cpp" />
   </ItemGroup>
 </Project>
