--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -26,6 +26,7 @@
     <ClInclude Include="src\calc\Physics.h" />
     <ClInclude Include="src\calc\VectorCalculator.h" />
     <ClInclude Include="src\model\CircleTrack.h" />
+    <ClInclude Include="src\lib\Numeric.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -51,5 +52,6 @@
     <ClCompile Include="src\calc\Physics.cpp" />
     <ClCompile Include="src\calc\VectorCalculator.cpp" />
     <ClCompile Include="src\model\CircleTrack.cpp" />
+    <ClCompile Include="src\lib\Numeric.cpp" />
   </ItemGroup>
 </Project>
