--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -46,12 +46,20 @@
     <ClInclude Include="src\lib\Random.h" />
     <ClInclude Include="src\calc\Vector3d.h" />
     <ClInclude Include="src\model\Track.h" />
+    <ClInclude Include="src\render\DebugShipRenderer.h" />
+    <ClInclude Include="src\render\DebugTrackRenderer.h" />
+    <ClInclude Include="src\render\DebugRenderLogic.h" />
+    <ClInclude Include="src\win\App.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\core\CollisionDetector.cpp" />
     <ClCompile Include="src\core\Controller.cpp" />
     <ClCompile Include="src\core\Game.cpp" />
     <ClCompile Include="src\core\GameConstants.cpp" />
+    <ClCompile Include="src\render\DebugShipRenderer.cpp" />
+    <ClCompile Include="src\render\DebugTrackRenderer.cpp" />
+    <ClCompile Include="src\render\DebugRenderLogic.cpp" />
+    <ClCompile Include="src\win\main.cpp" />
     <ClInclude Include="src\core\GameConstants.h" />
     <ClCompile Include="src\core\GameInitializer.cpp" />
     <ClCompile Include="src\core\GameManager.cpp" />
