--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -19,7 +19,6 @@
     <ClInclude Include="src\core\GameUpdater.h" />
     <ClInclude Include="src\core\MoveLogic.h" />
     <ClInclude Include="src\core\Controller.h" />
-    <ClInclude Include="src\core\CollisionDetector.h" />
     <ClInclude Include="src\core\VelocityCalculator.h" />
     <ClInclude Include="src\core\GameConstants.h" />
     <ClInclude Include="src\calc\Geometry.h" />
@@ -42,6 +41,10 @@
     <ClInclude Include="external\gl\opengl.h" />
     <ClInclude Include="src\core\BorderUpdater.h" />
     <ClInclude Include="src\model\RectBorder.h" />
+    <ClInclude Include="src\calc\LineIntersector.h" />
+    <ClInclude Include="src\core\CollisionProcessor.h" />
+    <ClInclude Include="src\core\TrackCollisionDetector.h" />
+    <ClInclude Include="src\core\ZCalculator.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -61,7 +64,6 @@
     <ClCompile Include="src\core\MoveLogic.cpp" />
     <ClCompile Include="src\core\Controller.cpp" />
     <ClCompile Include="src\core\GameConstants.cpp" />
-    <ClCompile Include="src\core\CollisionDetector.cpp" />
     <ClCompile Include="src\core\VelocityCalculator.cpp" />
     <ClCompile Include="src\calc\Geometry.cpp" />
     <ClCompile Include="src\calc\Physics.cpp" />
@@ -76,5 +78,9 @@
     <ClCompile Include="src\render\DebugRenderLogic.cpp" />
     <ClCompile Include="src\core\GameCamera.cpp" />
     <ClCompile Include="src\core\BorderUpdater.cpp" />
+    <ClCompile Include="src\calc\LineIntersector.cpp" />
+    <ClCompile Include="src\core\CollisionProcessor.cpp" />
+    <ClCompile Include="src\core\TrackCollisionDetector.cpp" />
+    <ClCompile Include="src\core\ZCalculator.cpp" />
   </ItemGroup>
 </Project>
