--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -24,7 +24,7 @@
     <ClInclude Include="external\gl\freeglut_std.h" />
     <ClInclude Include="external\gl\freeglut_ucall.h" />
     <ClInclude Include="external\gl\glut.h" />
-    <ClInclude Include="external\gl\opengl.h" />
+    <ClInclude Include="src\gl\opengl.h" />
     <ClInclude Include="src\calc\LineIntersector.h" />
     <ClInclude Include="src\core\BorderUpdater.h" />
     <ClInclude Include="src\core\CollisionProcessor.h" />
@@ -57,6 +57,7 @@
     <ClInclude Include="src\lib\Object.h" />
     <ClInclude Include="src\lib\Random.h" />
     <ClInclude Include="src\calc\Vector3d.h" />
+    <ClInclude Include="src\model\ShipMesh.h" />
     <ClInclude Include="src\model\Track.h" />
     <ClInclude Include="src\render\DebugShipRenderer.h" />
     <ClInclude Include="src\render\DebugTrackRenderer.h" />
@@ -73,6 +74,8 @@
     <ClCompile Include="src\core\GameConstants.cpp" />
     <ClCompile Include="src\core\TrackCollisionDetector.cpp" />
     <ClCompile Include="src\core\ZCalculator.cpp" />
+    <ClCompile Include="src\gl\opengl.cpp" />
+    <ClCompile Include="src\model\ShipMesh.cpp" />
     <ClCompile Include="src\render\DebugShipRenderer.cpp" />
     <ClCompile Include="src\render\DebugTrackRenderer.cpp" />
     <ClCompile Include="src\render\DebugRenderLogic.cpp" />
