--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -57,7 +57,7 @@
     <ClInclude Include="src\lib\Object.h" />
     <ClInclude Include="src\lib\Random.h" />
     <ClInclude Include="src\calc\Vector3d.h" />
-    <ClInclude Include="src\model\ShipMesh.h" />
+    <ClInclude Include="src\render\ShipMesh.h" />
     <ClInclude Include="src\model\Track.h" />
     <ClInclude Include="src\render\DebugShipRenderer.h" />
     <ClInclude Include="src\render\DebugTrackRenderer.h" />
@@ -75,7 +75,7 @@
     <ClCompile Include="src\core\TrackCollisionDetector.cpp" />
     <ClCompile Include="src\core\ZCalculator.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
-    <ClCompile Include="src\model\ShipMesh.cpp" />
+    <ClCompile Include="src\render\ShipMesh.cpp" />
     <ClCompile Include="src\render\DebugShipRenderer.cpp" />
     <ClCompile Include="src\render\DebugTrackRenderer.cpp" />
     <ClCompile Include="src\render\DebugRenderLogic.cpp" />
