--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -57,6 +57,7 @@
     <ClInclude Include="src\lib\Object.h" />
     <ClInclude Include="src\lib\Random.h" />
     <ClInclude Include="src\calc\Vector3d.h" />
+    <ClInclude Include="src\model\ShipMeasure.h" />
     <ClInclude Include="src\render\ShipMesh.h" />
     <ClInclude Include="src\model\Track.h" />
     <ClInclude Include="src\render\DebugShipRenderer.h" />
@@ -193,6 +194,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
