--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -78,6 +78,7 @@
     <ClCompile Include="src\core\TrackCollisionDetector.cpp" />
     <ClCompile Include="src\core\ZCalculator.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
+    <ClCompile Include="src\model\RectBorder.cpp" />
     <ClCompile Include="src\model\RoadTrack1.cpp" />
     <ClCompile Include="src\render\ShipMesh.cpp" />
     <ClCompile Include="src\render\DebugShipRenderer.cpp" />
