--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -89,5 +89,6 @@
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
     <ClCompile Include="src\model\RoadTrack1.cpp" />
+    <ClCompile Include="src\model\RectBorder.cpp" />
   </ItemGroup>
 </Project>
