--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -50,6 +50,7 @@
     <ClInclude Include="src\model\RoadTrack1.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
     <ClInclude Include="src\calc\Quaternion.h" />
+    <ClInclude Include="src\calc\PlaneEquation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -92,5 +93,6 @@
     <ClCompile Include="src\model\RoadTrack1.cpp" />
     <ClCompile Include="src\model\RectBorder.cpp" />
     <ClCompile Include="src\calc\Quaternion.cpp" />
+    <ClCompile Include="src\calc\PlaneEquation.cpp" />
   </ItemGroup>
 </Project>
