--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -44,13 +44,18 @@
     <ClInclude Include="src\calc\LineIntersector.h" />
     <ClInclude Include="src\core\CollisionProcessor.h" />
     <ClInclude Include="src\core\TrackCollisionDetector.h" />
-    <ClInclude Include="src\core\ZCalculator.h" />
     <ClInclude Include="src\render\ShipMesh.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
     <ClInclude Include="src\model\RoadTrack1.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
     <ClInclude Include="src\calc\Quaternion.h" />
     <ClInclude Include="src\calc\PlaneEquation.h" />
+    <ClInclude Include="src\core\TrackCollisionResult.h" />
+    <ClInclude Include="src\model\LoopTrack.h" />
+    <ClInclude Include="src\model\ShipCentralLine.h" />
+    <ClInclude Include="src\model\VelocityFunction.h" />
+    <ClInclude Include="src\core\PositionUpdater.h" />
+    <ClInclude Include="src\core\LapCounter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -86,7 +91,6 @@
     <ClCompile Include="src\calc\LineIntersector.cpp" />
     <ClCompile Include="src\core\CollisionProcessor.cpp" />
     <ClCompile Include="src\core\TrackCollisionDetector.cpp" />
-    <ClCompile Include="src\core\ZCalculator.cpp" />
     <ClCompile Include="src\render\ShipMesh.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
@@ -94,5 +98,10 @@
     <ClCompile Include="src\model\RectBorder.cpp" />
     <ClCompile Include="src\calc\Quaternion.cpp" />
     <ClCompile Include="src\calc\PlaneEquation.cpp" />
+    <ClCompile Include="src\core\TrackCollisionResult.cpp" />
+    <ClCompile Include="src\model\LoopTrack.cpp" />
+    <ClCompile Include="src\model\VelocityFunction.cpp" />
+    <ClCompile Include="src\core\PositionUpdater.cpp" />
+    <ClCompile Include="src\core\LapCounter.cpp" />
   </ItemGroup>
 </Project>
