--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -67,6 +67,7 @@
     <ClInclude Include="src\lib\Random.h" />
     <ClInclude Include="src\calc\Vector3d.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
+    <ClInclude Include="src\model\WheelTrack.h" />
     <ClInclude Include="src\render\ShipMesh.h" />
     <ClInclude Include="src\model\Track.h" />
     <ClInclude Include="src\render\DebugShipRenderer.h" />
@@ -93,6 +94,7 @@
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\model\RectBorder.cpp" />
     <ClCompile Include="src\model\RoadTrack1.cpp" />
+    <ClCompile Include="src\model\WheelTrack.cpp" />
     <ClCompile Include="src\render\ShipMesh.cpp" />
     <ClCompile Include="src\render\DebugShipRenderer.cpp" />
     <ClCompile Include="src\render\DebugTrackRenderer.cpp" />
