--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -29,7 +29,7 @@
     <ClInclude Include="src\calc\Quaternion.h" />
     <ClInclude Include="src\core\LapCounter.h" />
     <ClInclude Include="src\core\TrackCollisionResult.h" />
-    <ClInclude Include="src\model\LoopTrack.h" />
+    <ClInclude Include="src\model\track\LoopTrack.h" />
     <ClInclude Include="src\model\ShipCentralLine.h" />
     <ClInclude Include="src\model\VelocityFunction.h" />
     <ClInclude Include="src\gl\opengl.h" />
@@ -53,9 +53,9 @@
     <ClInclude Include="src\calc\Physics.h" />
     <ClInclude Include="src\calc\VectorCalculator.h" />
     <ClInclude Include="src\lib\Numeric.h" />
-    <ClInclude Include="src\model\CircleTrack.h" />
+    <ClInclude Include="src\model\track\CircleTrack.h" />
     <ClInclude Include="src\model\RectBorder.h" />
-    <ClInclude Include="src\model\RoadTrack1.h" />
+    <ClInclude Include="src\model\track\RoadTrack1.h" />
     <ClInclude Include="src\model\Ship.h" />
     <ClInclude Include="src\calc\SegmentIntersector.h" />
     <ClInclude Include="src\lib\Array.h" />
@@ -67,7 +67,7 @@
     <ClInclude Include="src\lib\Random.h" />
     <ClInclude Include="src\calc\Vector3d.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
-    <ClInclude Include="src\model\WheelTrack.h" />
+    <ClInclude Include="src\model\track\WheelTrack.h" />
     <ClInclude Include="src\render\ShipMesh.h" />
     <ClInclude Include="src\model\Track.h" />
     <ClInclude Include="src\render\DebugShipRenderer.h" />
@@ -88,13 +88,13 @@
     <ClCompile Include="src\core\LapCounter.cpp" />
     <ClCompile Include="src\core\TrackCollisionDetector.cpp" />
     <ClCompile Include="src\core\TrackCollisionResult.cpp" />
-    <ClCompile Include="src\model\LoopTrack.cpp" />
+    <ClCompile Include="src\model\track\LoopTrack.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
     <ClCompile Include="src\core\PositionUpdater.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\model\RectBorder.cpp" />
-    <ClCompile Include="src\model\RoadTrack1.cpp" />
-    <ClCompile Include="src\model\WheelTrack.cpp" />
+    <ClCompile Include="src\model\track\RoadTrack1.cpp" />
+    <ClCompile Include="src\model\track\WheelTrack.cpp" />
     <ClCompile Include="src\render\ShipMesh.cpp" />
     <ClCompile Include="src\render\DebugShipRenderer.cpp" />
     <ClCompile Include="src\render\DebugTrackRenderer.cpp" />
@@ -113,7 +113,7 @@
     <ClCompile Include="src\calc\Physics.cpp" />
     <ClCompile Include="src\calc\VectorCalculator.cpp" />
     <ClCompile Include="src\lib\Numeric.cpp" />
-    <ClCompile Include="src\model\CircleTrack.cpp" />
+    <ClCompile Include="src\model\track\CircleTrack.cpp" />
     <ClCompile Include="src\model\Ship.cpp" />
     <ClCompile Include="src\calc\SegmentIntersector.cpp" />
     <ClCompile Include="src\lib\Math.cpp" />
