--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="src\calc\Geometry.h" />
     <ClInclude Include="src\calc\Physics.h" />
     <ClInclude Include="src\calc\VectorCalculator.h" />
-    <ClInclude Include="src\model\CircleTrack.h" />
+    <ClInclude Include="src\model\track\CircleTrack.h" />
     <ClInclude Include="src\lib\Numeric.h" />
     <ClInclude Include="src\core\TurnAngleCalculator.h" />
     <ClInclude Include="src\core\PositionCorrector.h" />
@@ -46,16 +46,17 @@
     <ClInclude Include="src\core\TrackCollisionDetector.h" />
     <ClInclude Include="src\render\ShipMesh.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
-    <ClInclude Include="src\model\RoadTrack1.h" />
+    <ClInclude Include="src\model\track\RoadTrack1.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
     <ClInclude Include="src\calc\Quaternion.h" />
     <ClInclude Include="src\calc\PlaneEquation.h" />
     <ClInclude Include="src\core\TrackCollisionResult.h" />
-    <ClInclude Include="src\model\LoopTrack.h" />
+    <ClInclude Include="src\model\track\LoopTrack.h" />
     <ClInclude Include="src\model\ShipCentralLine.h" />
     <ClInclude Include="src\model\VelocityFunction.h" />
     <ClInclude Include="src\core\PositionUpdater.h" />
     <ClInclude Include="src\core\LapCounter.h" />
+    <ClInclude Include="src\model\track\WheelTrack.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -78,7 +79,7 @@
     <ClCompile Include="src\calc\Geometry.cpp" />
     <ClCompile Include="src\calc\Physics.cpp" />
     <ClCompile Include="src\calc\VectorCalculator.cpp" />
-    <ClCompile Include="src\model\CircleTrack.cpp" />
+    <ClCompile Include="src\model\track\CircleTrack.cpp" />
     <ClCompile Include="src\lib\Numeric.cpp" />
     <ClCompile Include="src\core\TurnAngleCalculator.cpp" />
     <ClCompile Include="src\core\PositionCorrector.cpp" />
@@ -94,14 +95,15 @@
     <ClCompile Include="src\render\ShipMesh.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
-    <ClCompile Include="src\model\RoadTrack1.cpp" />
+    <ClCompile Include="src\model\track\RoadTrack1.cpp" />
     <ClCompile Include="src\model\RectBorder.cpp" />
     <ClCompile Include="src\calc\Quaternion.cpp" />
     <ClCompile Include="src\calc\PlaneEquation.cpp" />
     <ClCompile Include="src\core\TrackCollisionResult.cpp" />
-    <ClCompile Include="src\model\LoopTrack.cpp" />
+    <ClCompile Include="src\model\track\LoopTrack.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
     <ClCompile Include="src\core\PositionUpdater.cpp" />
     <ClCompile Include="src\core\LapCounter.cpp" />
+    <ClCompile Include="src\model\track\WheelTrack.cpp" />
   </ItemGroup>
 </Project>
