--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -25,7 +25,7 @@
     <ClInclude Include="external\gl\freeglut_ucall.h" />
     <ClInclude Include="external\gl\glut.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
-    <ClInclude Include="src\calc\PlaneEquation.h" />
+    <ClInclude Include="src\calc\Plane.h" />
     <ClInclude Include="src\calc\Quaternion.h" />
     <ClInclude Include="src\calc\Sphere.h" />
     <ClInclude Include="src\core\LapCounter.h" />
@@ -80,7 +80,7 @@
   <ItemGroup>
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
     <ClCompile Include="src\calc\LineIntersector.cpp" />
-    <ClCompile Include="src\calc\PlaneEquation.cpp" />
+    <ClCompile Include="src\calc\Plane.cpp" />
     <ClCompile Include="src\calc\Quaternion.cpp" />
     <ClCompile Include="src\calc\Sphere.cpp" />
     <ClCompile Include="src\core\BorderUpdater.cpp" />
