--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -66,7 +66,7 @@
     <ClInclude Include="src\lib\Memory.h" />
     <ClInclude Include="src\lib\Object.h" />
     <ClInclude Include="src\lib\Random.h" />
-    <ClInclude Include="src\calc\Vector3d.h" />
+    <ClInclude Include="src\calc\Vector3.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
     <ClInclude Include="src\model\track\WheelTrack.h" />
     <ClInclude Include="src\render\RenderLogic.h" />
@@ -123,7 +123,7 @@
     <ClCompile Include="src\lib\Memory.cpp" />
     <ClCompile Include="src\lib\Object.cpp" />
     <ClCompile Include="src\lib\Random.cpp" />
-    <ClCompile Include="src\calc\Vector3d.cpp" />
+    <ClCompile Include="src\calc\Vector3.cpp" />
     <ClCompile Include="src\model\Track.cpp" />
     <ClCompile Include="src\win\App.cpp" />
   </ItemGroup>
