--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -5,7 +5,7 @@
     <ClInclude Include="src\lib\Memory.h" />
     <ClInclude Include="src\lib\Object.h" />
     <ClInclude Include="src\lib\Random.h" />
-    <ClInclude Include="src\calc\Vector3d.h" />
+    <ClInclude Include="src\calc\Vector3.h" />
     <ClInclude Include="src\lib\Array.h" />
     <ClInclude Include="src\lib\Exceptions.h" />
     <ClInclude Include="src\calc\SegmentIntersector.h" />
@@ -64,7 +64,7 @@
     <ClCompile Include="src\lib\Memory.cpp" />
     <ClCompile Include="src\lib\Object.cpp" />
     <ClCompile Include="src\lib\Random.cpp" />
-    <ClCompile Include="src\calc\Vector3d.cpp" />
+    <ClCompile Include="src\calc\Vector3.cpp" />
     <ClCompile Include="src\win\App.cpp" />
     <ClCompile Include="src\calc\SegmentIntersector.cpp" />
     <ClCompile Include="src\core\Game.cpp" />
