--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -72,9 +72,9 @@
     <ClInclude Include="src\render\RenderLogic.h" />
     <ClInclude Include="src\render\ShipMesh.h" />
     <ClInclude Include="src\model\Track.h" />
-    <ClInclude Include="src\render\DebugShipRenderer.h" />
-    <ClInclude Include="src\render\DebugTrackRenderer.h" />
-    <ClInclude Include="src\render\DebugRenderLogic.h" />
+    <ClInclude Include="src\render\debug\DebugShipRenderer.h" />
+    <ClInclude Include="src\render\debug\DebugTrackRenderer.h" />
+    <ClInclude Include="src\render\debug\DebugRenderLogic.h" />
     <ClInclude Include="src\win\App.h" />
   </ItemGroup>
   <ItemGroup>
@@ -99,9 +99,9 @@
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
     <ClCompile Include="src\model\track\WheelTrack.cpp" />
     <ClCompile Include="src\render\ShipMesh.cpp" />
-    <ClCompile Include="src\render\DebugShipRenderer.cpp" />
-    <ClCompile Include="src\render\DebugTrackRenderer.cpp" />
-    <ClCompile Include="src\render\DebugRenderLogic.cpp" />
+    <ClCompile Include="src\render\debug\DebugShipRenderer.cpp" />
+    <ClCompile Include="src\render\debug\DebugTrackRenderer.cpp" />
+    <ClCompile Include="src\render\debug\DebugRenderLogic.cpp" />
     <ClCompile Include="src\win\main.cpp" />
     <ClInclude Include="src\core\GameConstants.h" />
     <ClCompile Include="src\core\GameInitializer.cpp" />
