--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -69,6 +69,10 @@
     <ClInclude Include="src\calc\Vector3.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
     <ClInclude Include="src\model\track\WheelTrack.h" />
+    <ClInclude Include="src\render\release\BackgroundRenderer.h" />
+    <ClInclude Include="src\render\release\ReleaseRenderLogic.h" />
+    <ClInclude Include="src\render\release\ShipRenderer.h" />
+    <ClInclude Include="src\render\release\TrackRenderer.h" />
     <ClInclude Include="src\render\RenderLogic.h" />
     <ClInclude Include="src\render\ShipMesh.h" />
     <ClInclude Include="src\model\Track.h" />
@@ -98,6 +102,10 @@
     <ClCompile Include="src\model\RectBorder.cpp" />
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
     <ClCompile Include="src\model\track\WheelTrack.cpp" />
+    <ClCompile Include="src\render\release\BackgroundRenderer.cpp" />
+    <ClCompile Include="src\render\release\ReleaseRenderLogic.cpp" />
+    <ClCompile Include="src\render\release\ShipRenderer.cpp" />
+    <ClCompile Include="src\render\release\TrackRenderer.cpp" />
     <ClCompile Include="src\render\ShipMesh.cpp" />
     <ClCompile Include="src\render\debug\DebugShipRenderer.cpp" />
     <ClCompile Include="src\render\debug\DebugTrackRenderer.cpp" />
