--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -64,6 +64,7 @@
     <ClInclude Include="src\calc\Sphere.h" />
     <ClInclude Include="src\render\release\BackgroundRenderer.h" />
     <ClInclude Include="src\win\resource.h" />
+    <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -117,6 +118,7 @@
     <ClCompile Include="src\render\release\TrackRenderer.cpp" />
     <ClCompile Include="src\calc\Sphere.cpp" />
     <ClCompile Include="src\render\release\BackgroundRenderer.cpp" />
+    <ClCompile Include="src\render\debug\DebugBackgroundRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
