--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -72,6 +72,7 @@
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\String.h" />
     <ClInclude Include="external\soil\SOIL.h" />
+    <ClInclude Include="src\lib\MemoryBlock.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
